# documate

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_CURRENT.md  CHANGELOG.md  CONTRIBUTING.md  DEMO_FALLBACK.md  HACKATHON_WINNING_PLAYBOOK.md  Pitch.md  README.md  SUBMISSION.md  TECHNICAL_SUMMARY.md  dev.db  eslint.config.mjs  hardhat.config.js  next.config.mjs  package-lock.json  package.json  vercel.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: GodAgent.agent.md
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0.0-REQUIREMENTS.md  v1.0.0-ROADMAP.md
contracts/: DocuMate.sol  DocuMateMarketplace.sol  DocuMateStaking.sol
contracts/interfaces/: IIdentityPrecompile.sol  IXcmPrecompile.sol
contracts/marketplace/: Cargo.toml  lib.rs
docs/: DEMO.md  FAQ.md  demo-script.md  judge-qa.md  precompile-integration.md  presenter-script.md  video-narration-script.md
information/: businessmodel.md  ddoc.md  prd.md  template_studio_upgrade_plan.md  wdoc.md
prisma/: schema.prisma
remotion/: HackathonDemoVideo.tsx  PitchVideo.tsx  ProductDemoVideo.tsx  Root.tsx
remotion/scenes/: HookScene.tsx  (+5 more)
scripts/: create-kilt-did.js  demo-fallback-check.js  deploy-track2.js  deploy.js  testnet-config-check.js  testnet-smoke-track2.js  verify-wallet.js
test/: documate-track2.test.js
(+130 files in other folders)
