[package]
name = "docu_marketplace"
version = "1.0.0"
authors = ["DocuMate Team"]
edition = "2021"
description = "DocuMate Marketplace Smart Contract - Enforces the 75/20/5 revenue split"
license = "MIT"
repository = "https://github.com/documate/contracts"
keywords = ["ink", "polkadot", "marketplace", "nft", "web3"]

[dependencies]
ink = { version = "5.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.11", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = { version = "5.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []

[[test]]
name = "e2e_tests"
path = "e2e_tests.rs"
